# gambrinus

./: .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  gunicorn.conf.py  pyproject.toml  pytest.ini  run.py  test.py
app/: main.py
app/api/: __init__.py
app/api/assistant/: __init__.py  models.py  response.py  session.py  tool.py
app/api/exchange/: __init__.py
app/api/website/: __init__.py  auth.py  blog.py  client.py  contact.py  models.py  user.py
app/db/cache/: __init__.py  data_manager.py  embeddings.py
app/db/cachedb/: __init__.py
app/db/graphdb/: __init__.py  generic.py
app/db/sqldb/: __init__.py  admin.py  auth.py  schema.py
app/db/sqldb/migrations/: env.py  script.py.mako
app/db/sqldb/services/: __init__.py  client.py  contact.py  cookie.py  generic.py  response.py  session.py  user.py
app/db/vectordb/: __init__.py
app/services/integration/: __init__.py  close.py  wix.py
app/services/intent/: __init__.py  followup.py  generic.py  intent.py  topic.py
app/services/llm/: __init__.py  callbacks.py  chains.py  models.py  utils.py
app/services/llm/templates/: __init__.py  cypher.py  entity.py  flavor_profile.py  (+5 more)
app/services/qa/: answerchain.py  followup.py  formatter.py  generic.py  intent_pipeline.py  keys.py  qachain.py  summary.py
app/services/security/: __init__.py  oauth.py  utils.py
dump/dbo/: address.sql  alembic_version.sql  client.sql  contact.sql  cookie.sql  custom_message.sql  custom_question.sql  group.sql  group_permission.sql  permission.sql  response.sql  session.sql  user.sql  user_group.sql  user_permission.sql
(+33 files in other folders)
